# Naval-Sensor-Simulator

./: .gitignore  CMakeLists.txt  LICENCE  README.md  sensors.json  📘 README.md
src/: main.cpp  observer.h  qt_observer.h  sensor.cpp  sensor.h  sensorSystem.h  sensor_system.cpp  sensor_system.h  simulation_report.h
tests/: integration_test.cpp  test_sensors.cpp  unit_test.cpp
